--- a/main.html
+++ b/main.html
@@ -8,7 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <header class="header"><h2>Shaw's News</h2></header>
+	<div>
+	<div class="latest-news-section">
+		<h3>Latest News Articles</h3>
+		<ul>
+			<li>Article 1</li>
+			<li>Article 2</li>
+			<li>Article 3</li>
+		</ul>
+	</div>
+	<div class="mainArticle">
+		<h2>Main Article</h2>
+		<p>A newspaper headline is a very short summary of a news report. It normally appears in large letters above the report. The grammar of headlines is often non-standard and they can be difficult to read.
+		</p>
+	</div>
+	<div class="pictorial-news-section">
+		<h3>Pictorial News</h3>
+        <img class="img1" src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
+		<img class="img2" src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
+		<img class="img3" src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
+	</div>
+	</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
