--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
     <header class="header"><h2>Shaw's News</h2></header>
-	<div>
+	<div class="news">
 	<div class="latest-news-section">
 		<h3>Latest News Articles</h3>
 		<ul>
@@ -18,7 +18,7 @@
 			<li>Article 3</li>
 		</ul>
 	</div>
-	<div class="mainArticle">
+	<div class="two">
 		<h2>Main Article</h2>
 		<p>A newspaper headline is a very short summary of a news report. It normally appears in large letters above the report. The grammar of headlines is often non-standard and they can be difficult to read.
 		</p>
